# secsidh

./: .gitignore
code/: CMakeLists.txt  README.md  generate_asm.sh
code/.CMake/: compiler_options.cmake
code/main/: CMakeLists.txt  csidh.c  ctidh.c  fulltorsion-points.c
code/src/: CMakeLists.txt  lib.c  secsidh.h  secsidhconfig.h.cmake
code/src/CSIDH/: csidh.c  csidh.h  csidh_api.c  csidh_api.h
code/src/CSIDH/cofactor/: xmul_cofactor.py  xmul_cofactor_p2047m1l226.c  xmul_cofactor_p4095m27l262.c  xmul_cofactor_p5119m46l244.c  xmul_cofactor_p6143m59l262.c  xmul_cofactor_p8191m78l338.c  xmul_cofactor_p9215m85l389.c  xmul_cofactor_verification.py
code/src/CTIDH/: ctidh.c  ctidh.h  ctidh_api.c  ctidh_api.h
code/src/common/: elligator.c  elligator.h  mont.c  mont.h  namespace.h  poly.c  poly.h  primes.h  primes2047m1l226.c  primes4095m27l262.c  primes5119m46l244.c  primes6143m59l262.c  primes8191m78l338.c  primes9215m85l389.c  proj.h  random.c  random.h  rng.c  skgen.c  steps.h  steps_tunecycles2047k221.c  steps_tunecycles4095k256.c  steps_tunecycles5119k234.c  steps_tunecycles6143k256.c  steps_tunecycles8191k332.c  steps_tunecycles9215k384.c  steps_tunemults2047m1l226.c  steps_tunemults4095m27l262.c  steps_tunemults5119m46l244.c  steps_tunemults6143m59l262.c  steps_tunemults8191m78l338.c  steps_tunemults9215m85l389.c  uintbig2047m1l226.s  uintbig4095m27l262.s  uintbig5119m46l244.s  uintbig6143m59l262.s  uintbig8191m78l338.s  uintbig9215m85l389.s  validate.c
code/src/common/fp/: fp-counters.c  fp-counters.h  fp_inv2047m1l226.c  fp_inv4095m27l262.c  fp_inv5119m46l244.c  fp_inv6143m59l262.c  fp_inv8191m78l338.c  fp_inv9215m85l389.c  fp_sqrt2047m1l226.c  fp_sqrt4095m27l262.c  fp_sqrt5119m46l244.c  fp_sqrt6143m59l262.c  fp_sqrt8191m78l338.c  fp_sqrt9215m85l389.c  namespace_asm.py
code/src/common/fp/gmp/: fp-gmp.c  fp-gmp.h  fp2047m1l226.s  fp4095m27l262.s  fp5119m46l244.s  fp6143m59l262.s  fp8191m78l338.s  fp9215m85l389.s
code/src/common/fp/karatsuba/: fp-karatsuba.c  fp-karatsuba.h  fp2047m1l226.s  fp4095m27l262.s  fp5119m46l244.s  fp6143m59l262.s  fp8191m78l338.s  fp9215m85l389.s  sqr.s
code/src/common/fp/mulx/: fp.h  fp2047m1l226.s  fp4095m27l262.s  fp5119m46l244.s  fp512k256.s  fp6143m59l262.s  fp8191m78l338.s  fp9215m85l389.s
code/test/: CMakeLists.txt  fp-test.c  gae-randomness-free-test.c  gae-with-randomness-test.c  isog-test.c  mont-test.c  poly-mul-test.c  poly-redc-test.c
secsidh-rs/: Cargo.toml  README.md
secsidh-rs/secsidh/: Cargo.toml
secsidh-rs/secsidh-sys/: Cargo.toml  build.rs
secsidh-rs/secsidh-sys/src/: lib.rs
secsidh-rs/secsidh/benches/: keygen.rs
secsidh-rs/secsidh/examples/: key_sizes.rs
secsidh-rs/secsidh/src/: lib.rs
secsidh-rs/secsidh/tests/: csidh4095_derive.rs
